# NSaga

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile.toml  cliff.toml  eslint.config.mts  flake.nix  package.json  packages.nix  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mts  rustfmt.toml  tsconfig.json  xtask.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: update-pnpm-hash.yml
.ocr/: cli-config.json  config.yaml  reviewers-meta.json
.opencode/: config.json  opencode.json
.opencode/command/: build-bridges.md  dev-setup.md  e2e-test.md  lint.md  nix-build.md  sync-docs.md
.opencode/docs/: BACKLOG.md  COMPLETED_TASKS.md  NEXT_STEPS.md
.opencode/roadmaps/: README.md  cli-next-steps.md  future-enhancements.md  metadata-storage-risk-register.md  p2-metadata-manager-breakdown.md  project-status-report-2026-03-19.md
.opencode/skills/: README.md
.opencode/skills/cli-dev/: SKILL.md
.opencode/skills/core-dev/: SKILL.md
.opencode/skills/docs-maintenance/: SKILL.md
.opencode/skills/end-to-end-workflow/: SKILL.md
.opencode/skills/ffi-diplomat/: SKILL.md
.opencode/skills/lsp-dev/: SKILL.md
.opencode/skills/maintain-docs/: SKILL.md
.opencode/skills/nix-build/: SKILL.md
.opencode/skills/nix-env/: SKILL.md
.opencode/skills/nix-workflow/: SKILL.md
.opencode/skills/project-architecture/: SKILL.md
.opencode/skills/rust-dev/: SKILL.md
.opencode/skills/testing-guide/: SKILL.md
.opencode/skills/ts-bridge/: SKILL.md
.sisyphus/plans/: add-pnpm-hash-ci.md  cli-check-subcommand.md  cli-format-subcommand.md  cli-lsp-network-params.md  cli-next-steps.md  completed-stability-quality.md  docs-migration.md  future-enhancements.md  metadata-storage-contract-remediation.md  p2-metadata-manager-breakdown.md  p3-core-document-architecture.md  p3-lsp-integration-breakdown.md
.sisyphus/plans/archive/: README.md  cli-subcommand-base.md  fix-ci-runners-and-triggers.md  metadata-completion-plan.md  opencode-skills-expansion.md  (+2 more)
.sisyphus/roadmaps/: README.md  cli-next-steps.md  metadata-storage-risk-register.md  p2-metadata-manager-breakdown.md  p3-lsp-integration-breakdown.md
docs/ai-generated/: BACKLOG.md  COMPLETED_TASKS.md  JS_CONFIG_LOADER_ROADMAP.md  NEXT_STEPS.md
nix/: hashes.json  packages.nix
projects/android/: Cargo.toml
projects/cli/: AGENTS.md  Cargo.toml
projects/cli-js-bridges/: AGENTS.md  LICENSE
projects/cli/assets/js/src/bridge-core/: build.mts  package.json
projects/cli/assets/js/src/bridge-core/src/interfaces/: service.ts  transport.ts
projects/cli/assets/js/src/bridge-core/src/types/: rpc.ts
projects/cli/assets/js/src/bridge-nodejs/: build.mts  package.json  tsconfig.json
projects/cli/assets/js/src/bridge-nodejs/src/: bridge-server.ts  rpc-handler.ts  transport.ts
projects/cli/assets/js/src/config-bridge/: build.mts  package.json
projects/cli/assets/js/src/config-bridge/src/: index.ts
projects/cli/assets/js/src/config-bridge/src/services/: config.ts
projects/cli/assets/js/src/config-bridge/src/types/: config.ts
projects/cli/assets/js/src/nodejs-config-bridge/: build.mts  package.json  tsconfig.json
projects/cli/assets/js/src/nodejs-config-bridge/src/: bridge-server.ts
projects/cli/assets/js/src/nodejs-config-bridge/src/types/: _config.ts  index.ts
projects/cli/assets/test/: test-config-fn.cjs  test-config-fn.mjs  test-config.cjs  test-config.mjs  test-import.mjs
projects/cli/assets/test/config/cjs/: jsconfig.json
projects/cli/assets/test/config/config_manager/: .novelsaga.json5
projects/cli/assets/test/config/config_manager/sub/: novelsaga.config.yaml
projects/cli/assets/test/config/config_manager/sub/sub/: .novelsagaignore
projects/cli/assets/test/config/config_manager/watcher_test/: novelsaga.config.json
projects/cli/assets/test/config/cts/: .novelsaga.cts  tsconfig.json
projects/cli/assets/test/config/mjs/: jsconfig.json
projects/cli/assets/test/config/mts/: tsconfig.json
projects/cli/assets/test/config/override_article/sub/: novelsaga.config.yaml
projects/cli/assets/test/config/override_base/: .novelsaga.json5
projects/cli/assets/test/config/override_base/sub/: novelsaga.config.yaml
projects/cli/src/: main.rs
projects/cli/src/args/: mod.rs
projects/cli/src/assets/: error.rs  locator.rs  mod.rs
projects/cli/src/bridge/: env_keys.rs  error.rs  mod.rs
projects/cli/src/bridge/manager/: bridge.rs  config_bridge.rs  mod.rs
projects/cli/src/bridge/rpc/: client.rs  mod.rs  tests.rs  types.rs
projects/cli/src/bridge/runtime/: discovery.rs  mod.rs  process.rs  tests.rs
projects/cli/src/bridge/transport/: mod.rs  stdio.rs  tests.rs  unix_socket.rs
projects/cli/src/commands/: init.rs  metadata.rs  mod.rs
projects/cli/src/config/: fileformat.rs  loader.rs  manager.rs  mod.rs
projects/cli/src/config/schema/: mod.rs
projects/cli/src/core/: formatter.rs
projects/cli/src/home_path/: mod.rs
projects/cli/src/lsp/: backend.rs  completion.rs  mod.rs  position.rs
projects/cli/src/metadata/: cache.rs  index.rs  mod.rs  resolver.rs  watcher.rs  worker.rs
projects/cli/tests/: lsp_document_integration.rs
projects/core/: AGENTS.md  Cargo.toml
projects/core/assets/test/config/config_manager/sub/: test.md
projects/core/assets/test/config/config_manager/sub/sub/: novelsaga.config.json
projects/core/bindings/: _config.ts  _metadata.ts
projects/core/src/: diplomat_ffi.rs  ffi.rs  lib.rs  wasm.rs
projects/core/src/article/: mod.rs
projects/core/src/config/: file_def.rs  formatter.rs  mod.rs  workspace.rs
projects/core/src/config/fileformat/: mod.rs
projects/core/src/document/: mod.rs
projects/core/src/metadata/: mod.rs  model.rs  parser.rs  query.rs
projects/core/src/state/: _state.rs  feat.rs  init.rs  mod.rs
projects/core/src/state/manager/: config.rs
projects/wasm/: Cargo.toml
projects/wasm/src/: lib.rs
xtask/: AGENTS.md  Cargo.toml
xtask/src/: main.rs
xtask/src/tasks/: bindings.rs  build.rs  clean.rs  cli.rs  diplomat.rs  mod.rs  so.rs  utils.rs  wasm.rs
xtask/src/tasks/test/: cli.rs  lsp.rs  mod.rs
(+328 files in other folders)
