[workspace]
  members  = ["projects/*"]
  resolver = "3"

  [workspace.package]
    edition = "2024"
    version = "0.1.0"

  [workspace.lints.clippy]
    all      = "warn"
    pedantic = "warn"

[profile.release]
  codegen-units = 1       # Reduce parallel code generation units to improve optimization
  lto           = true    # Enable Link Time Optimization
  opt-level     = "z"     # Optimize for size
  panic         = "abort" # Abort on panic for smaller binary
  strip         = true    # Strip symbols from binary
