[workspace]
  exclude  = ["projects/cli-js-bridges"]
  members  = ["projects/*", "xtask"]
  resolver = "3"

  [workspace.package]
    edition = "2024"
    version = "0.1.0"

  [workspace.lints.clippy]
    all      = "warn"
    pedantic = "warn"

  [workspace.lints.rust]
    unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }

[profile.release]
  codegen-units = 1       # Reduce parallel code generation units to improve optimization
  lto           = true    # Enable Link Time Optimization
  opt-level     = "z"     # Optimize for size
  panic         = "abort" # Abort on panic for smaller binary
  strip         = true    # Strip symbols from binary
