[package]
  edition = "2021"
  name    = "xtask"
  publish = false
  version = "0.1.0"

[dependencies]
  anyhow           = "1.0"
  async-lsp-client = "0.2.3"
  clap             = { version = "4.5", features = ["derive"] }
  diplomat-tool    = "0.14.0"
  lsp-types        = "0.94"
  serde            = { version = "1.0", features = ["derive"] }
  serde_json       = "1.0"
  tempfile         = "3.24.0"
  tokio            = { version = "1", features = ["full"] }
  toml             = "0.9"
  which            = "8.0"
