[package]
  edition.workspace = true
  name              = "novelsaga-cli"
  version.workspace = true

[lints]
  workspace = true

[[bin]]
  name = "novelsaga"
  path = "src/main.rs"

[dependencies]
  clap = { version = "4.5.52", features = [
    "string",
    "env",
    "unicode",
    "derive",
  ] }
  config = { version = "0.15.19", features = [
    "toml",
    "yaml",
    "json",
    "json5",
    "ron",
    "corn",
  ] }
  directories = "^6.0"
  either = "1.9"
  gray_matter = { version = "0.3.2", features = ["yaml"] }
  ignore = "0.4.25"
  merge-struct = "0.1.0"
  notify = { version = "8.1.0", features = ["serde"] }
  novelsaga-core = { path = "../core" }
  num_cpus = "1.17.0"
  path-absolutize = "^3.1"
  rusty_nodejs_repl = { version = "0.2.2", features = ["integration_utils"] }
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  tokio = { version = "1", features = [
    "io-std",
    "io-util",
    "macros",
    "rt",
    "sync",
  ] }
  tokio-util = { version = "0.7.17", features = ["compat"] }
  tower-lsp = "0.20"
  version-compare = "0.2.1"
  wasmtime = "39.0.1"
  wasmtime-wasi = { version = "39.0.1", features = ["p2"] }
  which = "8.0.0"
