[package]
  edition.workspace = true
  name              = "novelsaga-cli"
  version.workspace = true

[lints]
  workspace = true

[[bin]]
  name = "novelsaga"
  path = "src/main.rs"

[dependencies]
  anyhow = "1.0.100"
  clap = { version = "4.5.52", features = [
    "string",
    "env",
    "unicode",
    "derive",
  ] }
  directories = "6.0.0"
  either = "1.9"
  novelsaga-core = { path = "../core" }
  path-absolutize = "^3.1"
  rust-embed = "8.11.0"
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  thiserror = "2.0"
  tokio = { version = "1", features = [
    "io-std",
    "io-util",
    "macros",
    "rt",
    "sync",
  ] }
  tokio-util = { version = "0.7.17", features = ["compat"] }
  tower-lsp = "0.20"
  uuid = { version = "1.0", features = ["v4"] }
  version-compare = "0.2.1"
  wasmtime = "39.0.1"
  wasmtime-wasi = { version = "39.0.1", features = ["p2"] }
  which = "8.0.0"

[dev-dependencies]
  tempfile = "3.24.0"
