[package]
  edition.workspace = true
  name              = "novelsaga-core"
  version.workspace = true

[lib]
  crate-type = ["rlib"]

[dependencies]
  merge-struct = "0.1.0"
  pangu        = "0.3.0"
  serde        = { version = "1.0", features = ["derive"] }
  wasm-bindgen = { version = "0.2", optional = true }

[features]
  wasm = ["dep:wasm-bindgen"]

[lints]
  workspace = true
